# timeflux

./: .gitattributes  .gitignore  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.rst  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  timeflux.py  travis.yaml
.github/: FUNDING.yml
.github/workflows/: build.yml  publish.yml  pythonpackage.yml  pythonpublish.yml  test.yml
conda.recipe/: meta.yaml
doc/: Makefile  conf.py  index.rst
doc/extending/: best_practices.rst  branches.rst  plugin.rst  plugins.rst
doc/general/: about.rst  concepts.rst  conda.rst  getting_help.rst
doc/misc/: indices.rst
doc/static/apps/: helloworld_1.yaml  helloworld_2.yaml  helloworld_3.yaml  neurofeedback.yaml
doc/static/js/: ga.js  ui.js
doc/usage/: extending.rst  getting_started.rst  going_further.rst  graph.rst  hello_world.rst  use_case.rst
examples/: broker.yaml  dejitter_space.yaml  gate.yaml  hdf5_string.yaml  import2.yaml  lsl.yaml  lsl_multiple.yaml  osc.yaml  pub.yaml  replay.yaml  replay2.yaml  save.yaml  zmq.yaml  zmq2.yaml
test/: conftest.py  helpers.py  lsl_api.cfg  test_background.py  test_branch.py  test_graph.py  test_helpers_mne.py  test_helpers_port.py  test_manager.py  test_node.py  test_node_accumulate.py  test_node_axis.py  test_node_dejitter.py  test_node_epoch.py  test_node_expression.py  test_node_gate.py  test_node_query.py  test_node_window.py  test_nodes_misc.py  test_worker.py
test/core/: test_branch.py  test_manager.py  test_worker.py
test/data/: replay.hdf5
test/graphs/: epoch.yaml  import.yaml  import3.yaml  lsl.yaml  lsl_multiple.yaml  multi.yaml  osc.yaml  sub.yaml  template.yaml  test.json  test.yaml  test2.yaml  ui.yaml  window.yaml
test/helpers/: init.py  test_background.py  test_bdf.py  test_mne.py  test_port.py
test/launcher/: .env  .env.alt  dummy.py  dummy_exception.py  launcher.py  post.py  post_exception.py  test.bat  test.sh  test_1.yaml  test_2.yaml  test_3.yaml  test_5.yaml  test_6.yaml  test_7.yaml  test_8.yaml  test_9.yaml
test/nodes/: test_apply.py  test_axis.py  test_dejitter.py  test_epoch.py  test_events.py  test_misc.py  test_ml.py  test_query.py  test_states.py  test_window.py
test/tools/: convert.py  sync.py
timeflux/: __init__.py  __main__.py  _version.py  timeflux.py
timeflux/core/: branch.py  exceptions.py  graph.py  io.py  logging.py  manager.py  message.py  node.py  registry.py  scheduler.py  sync.py  validate.py  worker.py
timeflux/estimators/transformers/: shape.py
timeflux/helpers/: background.py  bdf.py  clock.py  handler.py  hdf5.py  lsl.py  mne.py  port.py  terminate.py  testing.py  tests.py  viz.py
timeflux/nodes/: accumulate.py  apply.py  arithmetic.py  axis.py  conversion.py  debug.py  dejitter.py  epoch.py  events.py  expression.py  gate.py  generator.py  hdf5.py  index.py  lsl.py  missing.py  ml.py  monitor.py  on_ports.py  osc.py  pandas_helpers.py  query.py  random.py  safeguards.py  sequence.py  states.py  window.py  xarray.py  zmq.py
timeflux/schema/: app.json
timeflux/test/: test_apply.py
timeflux/timeflux/nodes/: query.py  xarray.py
