[metadata]
name = timeflux
description-file = README.rst
author = Pierre Clisson
author-email = contact@timeflux.io
license = MIT
home-page = https://timeflux.io
project_urls =
    Documentation = https://doc.timeflux.io
    Source Code = https://github.com/timeflux/timeflux
    Bug Tracker = https://github.com/timeflux/timeflux/issues

[files]
data_files =
    timeflux/schema = *

[entry_points]
console_scripts =
    timeflux = timeflux.timeflux:main

[pbr]
skip_git_sdist = 1
skip_changelog = 1
skip_authors = 1
