[metadata]
name = timeflux
summary = Acquisition and real-time processing of biosignals
description-file = README.rst
author = Pierre Clisson
author-email = contact@timeflux.io
license = MIT
home-page = https://timeflux.io
project_urls =
    Documentation = https://doc.timeflux.io
    Source Code = https://github.com/timeflux/timeflux
    Bug Tracker = https://github.com/timeflux/timeflux/issues
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    time series
    machine learning
    biosignals
    brain-computer interface
    bci
    eeg
    ecg
    ppg
    emg
    eda
    gsr

[files]
data_files =
    schema = timeflux/schema/*

[entry_points]
console_scripts =
    timeflux = timeflux.timeflux:main

[pbr]
skip_git_sdist = 1
skip_changelog = 1
skip_authors = 1
