[metadata]
name = timeflux
description = Acquisition and real-time processing of biosignals
long_description = file: README.rst
author = Pierre Clisson
author-email = contact@timeflux.io
license = MIT
home-page = https://timeflux.io
project_urls =
    Documentation = https://doc.timeflux.io
    Source Code = https://github.com/timeflux/timeflux
    Bug Tracker = https://github.com/timeflux/timeflux/issues
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
keywords = time series, machine learning, biosignals, brain-computer interface, BCI, EEG, ECG, PPG, EMG, EDA, GSR

[options]
packages = find:
install_requires =
    networkx>=2.4
    PyYAML>=5.1
    numpy>=1.17
    pandas>=0.25
    xarray>=0.14
    bottleneck>=1.3
    scipy>=1.3
    pyzmq>=18.1
    coloredlogs>=10.0
    tables>=3.6
    Cython>=0.29.6
    pylsl>=1.12.2
    python-osc>=1.7.0
    python-dotenv>=0.10
    jsonschema>=3.0
    graphviz>=0.13
    scikit-learn>=0.21.3
    Jinja2>=2.11
    colorama>=0.4.4

[options.extras_require]
dev =
    pytest>=5.3
    sphinx>=2.2
    sphinx_rtd_theme>=0.4
    setuptools_scm
    docinit
    black

[options.package_data]
timeflux = schema/app.json

[options.entry_points]
console_scripts =
    timeflux = timeflux.timeflux:main

[build_sphinx]
warning-is-error = True

[docinit]
name = Timeflux
html_logo = static/img/logo.png
html_favicon = static/img/favicon.ico
autoapi_ignore =
    *classifiers*
    *__init_.py
    *__main__.py
    *timeflux.py
    *version.py
